[package]
name = "tok"
version = "0.0.0-dev"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"

[lib]

[[bin]]
name = "tok"
doc = false
required-features = ["bin-dependencies"]

[dependencies]
log = "0.4.8"

# bin dependencies
atty = "0.2.14"
console = { version = "0.10.0", optional = true }
lazy-string-replace = "0.1.3"
nom = "5.1.1"
simple_logger = { version = "1.6.0", optional = true }
structopt = { version = "0.3.12", optional = true }
time = { version = "0.2.11", default-features = false, features = ["std"] }

[features]
bin-dependencies = ["console", "simple_logger", "structopt"]
default = ["bin-dependencies"]

[patch.crates-io]
lazy-string-replace = { git = "https://github.com/Tamschi/lazy-string-replace", rev = "46920941ef52332f0e9def60633f0e8e59ed0e01" }